--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -1,7 +1,5 @@
 /*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+random stuff
 */
 
 /* Wrapper */
@@ -37,7 +35,7 @@
 	}
 
 		#main > .panel {
-			background: #ffffff;
+			background: #a348d9;
 			margin-bottom: 2em;
 		}
 
