--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,11 +8,7 @@
 @import url('fontawesome-all.min.css');
 
 /*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
+random stuff
 // Breakpoints.
 
 	@include breakpoints((
@@ -391,7 +387,7 @@
 		-webkit-appearance: none;
 		display: inline-block;
 		background-color: #222222;
-		color: #ffffff;
+		color: #a348d9;
 		border: 0;
 		cursor: pointer;
 		outline: 0;
@@ -523,7 +519,7 @@
 		a {
 			position: relative;
 			display: inline-block;
-			color: #ffffff;
+			color: #a348d9;
 			width: 1em;
 			height: 1em;
 			line-height: 0.9em;
@@ -548,7 +544,7 @@
 				left: 50%;
 				bottom: -0.75em;
 				margin-left: -0.5em;
-				border-bottom: solid 0em #ffffff;
+				border-bottom: solid 0em #a348d9;
 				border-left: solid 0.5em transparent;
 				border-right: solid 0.5em transparent;
 				@include vendor('transition', 'border-bottom-width .25s ease-in-out');
@@ -558,7 +554,7 @@
 				display: block;
 				position: absolute;
 				background: #222222;
-				color: #ffffff;
+				color: #a348d9;
 				top: -2.75em;
 				font-size: 0.3em;
 				height: 2.25em;
@@ -654,7 +650,7 @@
 		position: relative;
 		overflow: hidden;
 		width: 100%;
-		background: #ffffff;
+		background: #a348d9;
 		box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
 		@include vendor('transition', (
 			'min-height 0.5s ease-in-out',
@@ -724,7 +720,7 @@
 						height: 2.75em;
 						background: #000;
 						background: rgba(0, 0, 0, 0.75);
-						color: #ffffff;
+						color: #a348d9;
 						text-align: center;
 						line-height: 2.75em;
 						font-size: 1.5em;
