--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -6,9 +6,7 @@
 @import 'libs/html-grid';
 
 /*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+random stuff
 */
 
 /* Wrapper */
@@ -46,7 +44,7 @@
 		box-shadow: none;
 
 		> .panel {
-			background: #ffffff;
+			background: #a348d9;
 			margin-bottom: 2em;
 
 			&:last-child {
